Updated image size
Included max-width property

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		    }
 		    img {
 		    	width: 100%;
+		    	max-width:500px;
 		    }
 		</style>
 	</head>
@@ -34,7 +35,7 @@
 		<h1><span id="name">??????</span><h1>
 		<button type="button" id="clicker">GET A RANDOM NAME</button>
 		<br/>
-		<img src="pointer.jpg"/>
+		<img src="pointer.jpg"/><br/>
 		<select id="subjects">
 			<option value="maths" selected>Maths</option>
 			<option value="english">English</option>
