--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 				for (var i = 0; i <= raw.length; i++) {
 					if (raw[i] == "," | i == raw.length) {
 						array_to_push.push(single);
+						single = "";
 					} else if (raw[i] == " ") {
 						single = "";
 					} else {
